<resources>
    <string name="app_name">PostReddit</string>
    <string name="exitbutton">exitButton</string>
    <string name="submitPost">submitting_post</string>
    <string name="post">Post</string>
    <string name="powered_by">Powered by</string>
    <string name="morselogo">morseLogo</string>
    <string name="redditlogo">redditlogo</string>
    <string name="profilepic">profilePic</string>
    <string name="textview">r/SubReddit</string>
    <string name="setlocation">setlocation</string>
    <string name="post_a_comment">Post a comment…</string>
    <string name="welcome">Welcome</string>
    <string name="posted">Posted</string>

</resources>