<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ABD7F3"
    app:barrierMargin="100dp"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include"
        layout="@layout/appbar"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnPost"
        android:layout_width="74dp"
        android:layout_height="40dp"
        android:bottomLeftRadius="10dp"
        android:bottomRightRadius="10dp"
        android:contentDescription="@string/submitPost"
        android:gravity="center_horizontal"
        android:includeFontPadding="true"
        android:paddingLeft="6dp"
        android:paddingTop="9dp"
        android:paddingRight="6dp"
        android:paddingBottom="4dp"
        android:text="@string/post"
        android:textColor="@color/cardview_light_background"
        android:textAllCaps="false"
        android:topLeftRadius="10dp"
        android:topRightRadius="10dp"
        android:visibility="visible"
        app:backgroundTint="#FF5722"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        tools:visibility="visible" />

    <ImageView
        android:id="@+id/imageButton7"
        android:layout_width="37dp"
        android:layout_height="35dp"
        android:contentDescription="@string/exitbutton"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/include"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.014"
        app:srcCompat="?attr/homeAsUpIndicator"
        tools:srcCompat="?attr/homeAsUpIndicator"
        tools:visibility="visible" />

    <View
        android:id="@+id/view3"
        android:layout_width="376dp"
        android:layout_height="281dp"
        android:background="@drawable/round"
        android:padding="@dimen/cardview_default_radius"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.434"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/bottomText"
        android:layout_width="89dp"
        android:layout_height="37dp"
        android:paddingTop="10dp"
        android:text="@string/powered_by"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="39dp"
        android:layout_height="30dp"
        android:contentDescription="@string/morselogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.61"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977"
        app:srcCompat="@drawable/logo" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="217dp"
        android:layout_height="46dp"
        android:contentDescription="@string/redditlogo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.417"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.007"
        app:srcCompat="@drawable/redditlogo" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="47dp"
        android:layout_height="45dp"
        android:contentDescription="@string/profilepic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/ettextView"
        android:layout_width="123dp"
        android:layout_height="17dp"
        android:text="@string/textview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.315"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.295" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="28dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324"
        app:srcCompat="@android:drawable/ic_dialog_map"
        android:contentDescription="@string/setlocation"/>

    <EditText
        android:id="@+id/etComment"
        android:layout_width="334dp"
        android:layout_height="129dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/post_a_comment"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465"
        android:autofillHints=""/>


</androidx.constraintlayout.widget.ConstraintLayout>